packages/raystack/components/filter-chip/filter-chip.module.css
.chip {
  font-weight: var(--rs-font-weight-regular);
  font-size: var(--rs-font-size-small);
  line-height: var(--rs-line-height-small);
  letter-spacing: var(--rs-letter-spacing-small);
  height: var(--rs-space-7);
  background: var(--rs-color-background-base-primary);
  border-radius: var(--rs-radius-2);
  text-wrap: nowrap;
  width: fit-content;
  min-width: min-content;
  overflow: clip;
}

.chip-default {
  border: 1px solid var(--rs-color-border-base-tertiary);
}

.chip-label {
  padding: 0 var(--rs-space-3);
  flex-shrink: 0;
}
.operationText {
  color: var(--rs-color-foreground-base-secondary);
  font-weight: var(--rs-font-weight-regular);
  font-size: var(--rs-font-size-small);
  line-height: var(--rs-line-height-small);
  letter-spacing: var(--rs-letter-spacing-small);
  display: flex;
  align-items: center;
  flex-shrink: 0;
}

.operationText:hover {
  color: var(--rs-color-foreground-base-primary);
  background: var(--rs-color-background-base-primary-hover);
}

/* Target any input fields within the chip */
.chip input {
  border: none;
  box-shadow: none;
  background: transparent;
  min-height: unset;
  padding: 0;
  text-overflow: ellipsis;
}

/* Control height of Select items */
.chip [role="option"] {
  min-height: var(--rs-space-7);
  height: var(--rs-space-7);
}

/* Style for select triggers */
.chip [data-trigger] {
  border: none;
  box-shadow: none;
  background: transparent;
  min-height: unset;
  border-radius: 0;
  color: var(--rs-color-foreground-base-primary);
  font-weight: var(--rs-font-weight-regular);
  font-size: var(--rs-font-size-small);
  line-height: var(--rs-line-height-small);
  letter-spacing: var(--rs-letter-spacing-small);
}

.removeIconContainer {
  display: flex;
  align-items: center;
  height: 100%;
  padding-left: var(--rs-space-2);
  padding-right: var(--rs-space-2);
  margin: 0;
  width: var(--rs-space-7);
  justify-content: center;
  flex-shrink: 0;
  cursor: pointer;
}

.removeIconContainer:hover {
  background: var(--rs-color-background-base-primary-hover);
}

.removeIcon {
  cursor: pointer;
  color: var(--rs-color-foreground-base-primary);
  transition: color 0.2s ease-in-out;
  width: var(--rs-space-4);
  height: var(--rs-space-4);
}

.removeIcon:hover {
  color: var(--rs-color-foreground-base-primary);
}

.selectValue {
  color: var(--rs-color-foreground-base-primary);
  font-weight: var(--rs-font-weight-regular);
  font-size: var(--rs-font-size-small);
  line-height: var(--rs-line-height-small);
  letter-spacing: var(--rs-letter-spacing-small);
  display: flex;
  align-items: center;
  background: transparent;
  height: 100%;
  min-height: auto;
  padding: var(--rs-space-2) var(--rs-space-3);
  border-radius: 0;
  min-width: 0;
  overflow: hidden;
}

.selectValue * {
  font-weight: var(--rs-font-weight-regular);
  min-width: 0;
}

.operationValue {
  color: var(--rs-color-foreground-base-secondary);
  flex-shrink: 0;
}

button.selectValue:hover {
  color: var(--rs-color-foreground-base-primary);
  background: var(--rs-color-background-base-primary-hover);
}

.leadingIcon {
  display: flex;
  align-items: center;
  width: var(--rs-space-4);
  height: var(--rs-space-4);
  max-width: var(--rs-space-4);
  max-height: var(--rs-space-4);
}

.inputFieldWrapper {
  padding: 0;
  min-width: 0;
  overflow: hidden;
}

.inputField {
  border-radius: 0;
  min-height: 22px;
  height: 22px;
  border: none;
  box-shadow: none;
}

/* Match height of Input when FilterChip variant is text */
.chip[data-variant="text"] .inputField {
  height: var(--rs-space-7);
  min-height: var(--rs-space-7);
}

.inputFieldWrapper input {
  padding-left: var(--rs-space-3);
  padding-right: var(--rs-space-3);
}

.dateFieldWrapper {
  padding: 0;
  min-width: 0;
  overflow: hidden;
}

.dateField {
  border-radius: 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: fit-content;
  height: 22px;
  min-height: 22px;
  border: none;
  box-shadow: none;
}

/* match height of the DatePicker when FilterChip variant is text */
.chip[data-variant="text"] .dateField {
  height: var(--rs-space-7);
  min-height: var(--rs-space-7);
}

.dateField input {
  text-align: left;
  padding-left: var(--rs-space-3);
  padding-right: var(--rs-space-3);
}

.dateField [data-trailing] {
  margin-left: auto;
}

.dateFieldWrapper [class*="helper-text"] {
  display: none;
}

.dateFieldWrapper [class*="input-error-wrapper"] {
  border: 1px solid var(--rs-color-border-danger-primary);
}

